src/AddModal/index.css
.add-button{
  background-color: #587DFF;
  color: white;
  font-size: 30px;
  border-radius: 100%;
  width: 60px;
  aspect-ratio: 1;
  border: none;
  box-shadow: 4px 4px 10px 3px rgba(0,0,0,.25);
  position: fixed;
  bottom: 5%;
  right: 5%;
}

.add-modal{
  background-color: rgba(0,0,0,.33);
  position: fixed;
  z-index: 1;
  left: 0;
  top: 0;
  width: 100%;
  height: 100%;
  overflow: auto;
}

.add-modal-box{
  background-color: #fefefe;
  margin: 15% auto;
  padding: 20px;
  max-width: 200px;
  animation-name: modal-animate;
  animation-duration: 0.7s;
  position: relative;
  display: flex;
  flex-direction: column;
  justify-content: center
}



@keyframes modal-animate {
  from{scale: 0.2}
  to{scale: 1}
}

.add-modal-btn-group{
  display: flex;
  flex-direction: row;
}

.add-modal-submit-button{
  background-color: #55D271;
  border: none;
  border-radius: 100%;
  width: 40px;
  aspect-ratio: 1;
  color: white;
  font-size: 20px;
}

.add-modal-cancel-button{
  background-color: #FD6767;
  border: none;
  border-radius: 100%;
  width: 40px;
  aspect-ratio: 1;
  color: white;
  font-size: 20px;
}

